--- a/assets/admin/css/gridview/style.css
+++ b/assets/admin/css/gridview/style.css
@@ -345,9 +345,9 @@ ul.yiiPager .last
    border: 0;
    cursor: pointer;
    font-size: 13px;
-   width: 118px;
+   width: 100%;
    z-index: 100;
-   height: 100px;
+   height: 100%;
 }
 .box-upload-image{
    display: inline-block;
