--- a/assets/admin/css/common.css
+++ b/assets/admin/css/common.css
@@ -340,6 +340,7 @@ ul.checklist li ul{
     width: 160px;
     margin: 0 10px 0 0;
     cursor: pointer;
+    position: relative;
 }
 .list-slide li .title{
     padding: 7px;
@@ -358,8 +359,42 @@ ul.checklist li ul{
     height: 100px;
     cursor: pointer;
 }
-.list-slide li.add .image .material-icons{
+.list-slide li.add .image .material-icons.add{
     font-size: 35px;
     font-weight: bold;
     line-height: 100px;
+}
+.list-slide li .material-icons:hover{
+    background: #E2E2E2;
+}
+.list-slide li .edit,
+.list-slide li .delete{
+    position: absolute;
+    right: 5px;
+    top:5px;
+    font-size: 22px;
+    z-index: 1;
+}
+.list-slide li .edit{
+    right: 30px;
+    font-size: 18px;
+    top: 7px;
+}
+.list-slide li.disable .image,
+.list-slide li.disable .title{
+    opacity: 0.3;
+}
+#attribute-slide{
+    position: relative;
+}
+#attribute-slide .loading{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.25);
+    z-index: 1;
+    padding: 100px;
 }
